force-app/main/default/objects/Door_Tag_Script__c/Door_Tag_Script__c.object-meta.xml
<CustomObject>
    <label>Door Tag Script</label>
    <nameField>
        <displayFormat>Survey-{0000000000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Door Tag Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>