force-app/main/default/objects/Door_Tag_Script__c/fields/Account_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Account_Mobile__c</fullName>
    <description>It will store Person Account Mobile field value</description>
    <label>Account Mobile</label>
    <type>Phone</type>
</CustomField>