force-app/main/default/objects/Door_Tag_Script__c/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <description>It will store the person account phone number</description>
    <label>Account Phone</label>
    <type>Phone</type>
</CustomField>