force-app/main/default/objects/Door_Tag_Script__c/fields/additional_Industry__c.field-meta.xml
<CustomField>
    <fullName>additional_Industry__c</fullName>
    <description>It holds the additional industry values to prevent inventory duplication.</description>
    <label>Additional Industry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>