force-app/main/default/objects/Door_Tag_Script__c/fields/AgentPhone__c.field-meta.xml
<CustomField>
    <fullName>AgentPhone__c</fullName>
    <label>AgentPhone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>