force-app/main/default/objects/Door_Tag_Script__c/fields/AgentScale__c.field-meta.xml
<CustomField>
    <fullName>AgentScale__c</fullName>
    <label>AgentScale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>