force-app/main/default/objects/Door_Tag_Script__c/fields/AI_All_on_one_key__c.field-meta.xml
<CustomField>
    <fullName>AI_All_on_one_key__c</fullName>
    <description>It holds value of one key</description>
    <label>AI All on one key?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>