force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Are_you_planning_on_hiring_a_Pool_Ser__c.field-meta.xml
<CustomField>
    <fullName>AI_Are_you_planning_on_hiring_a_Pool_Ser__c</fullName>
    <label>AI Are you planning on hiring a Pool Ser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>