force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Blind_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Blind_install__c</fullName>
    <label>AI Blind install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>