force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Carpet_Tile_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>AI_Carpet_Tile_Cleaning__c</fullName>
    <label>AI Carpet/Tile Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>