force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Current_problem__c.field-meta.xml
<CustomField>
    <fullName>AI_Current_problem__c</fullName>
    <label>AI Current problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>