force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Do_you_plan_on_hiring_a_professional__c.field-meta.xml
<CustomField>
    <fullName>AI_Do_you_plan_on_hiring_a_professional__c</fullName>
    <label>AI Do you plan on hiring a professional?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>