force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Enclosed_or_open__c.field-meta.xml
<CustomField>
    <fullName>AI_Enclosed_or_open__c</fullName>
    <label>AI Enclosed or open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>