force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Energy_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Energy_Audit__c</fullName>
    <label>AI Energy Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>