force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Energy_efficient_Insulation_installat__c.field-meta.xml
<CustomField>
    <fullName>AI_Energy_efficient_Insulation_installat__c</fullName>
    <label>AI Energy efficient Insulation installat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>