force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Equipment_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Equipment_install__c</fullName>
    <label>AI Equipment install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>