force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Extension_of_current_system__c.field-meta.xml
<CustomField>
    <fullName>AI_Extension_of_current_system__c</fullName>
    <label>AI Extension of current system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>