force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Flooring_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Flooring_Repair__c</fullName>
    <label>AI Flooring Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>