force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Full_Bathroom__c.field-meta.xml
<CustomField>
    <fullName>AI_Full_Bathroom__c</fullName>
    <label>AI Full Bathroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>