force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Full_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>AI_Full_Kitchen__c</fullName>
    <label>AI Full Kitchen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>