force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Garge_door_repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Garge_door_repair__c</fullName>
    <label>AI Garge door repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>