force-app/main/default/objects/Door_Tag_Script__c/fields/AI_hiring_a_landscaping_service__c.field-meta.xml
<CustomField>
    <fullName>AI_hiring_a_landscaping_service__c</fullName>
    <label>AI hiring a landscaping service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>