force-app/main/default/objects/Door_Tag_Script__c/fields/AI_How_many_doors_do_you_have__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_doors_do_you_have__c</fullName>
    <label>AI How many doors do you have?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>