force-app/main/default/objects/Door_Tag_Script__c/fields/AI_How_many_doors_need_rekeyed__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_doors_need_rekeyed__c</fullName>
    <label>AI How many doors need rekeyed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>