force-app/main/default/objects/Door_Tag_Script__c/fields/AI_How_many_feet_of_fencing__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_feet_of_fencing__c</fullName>
    <label>AI How many feet of fencing?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>