force-app/main/default/objects/Door_Tag_Script__c/fields/AI_How_many_rooms_Or_what_areas__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_rooms_Or_what_areas__c</fullName>
    <label>AI How many rooms? Or what areas?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>