force-app/main/default/objects/Door_Tag_Script__c/fields/AI_How_many_windows__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_windows__c</fullName>
    <label>AI How many windows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>