force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Immediate_Issue__c.field-meta.xml
<CustomField>
    <fullName>AI_Immediate_Issue__c</fullName>
    <label>Immediate Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>