force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Install_Deck__c.field-meta.xml
<CustomField>
    <fullName>AI_Install_Deck__c</fullName>
    <label>AI Install Deck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>