force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Installation_of_new_electrical__c.field-meta.xml
<CustomField>
    <fullName>AI_Installation_of_new_electrical__c</fullName>
    <label>AI Installation of new electrical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>