force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Landscape_Design__c.field-meta.xml
<CustomField>
    <fullName>AI_Landscape_Design__c</fullName>
    <label>AI Landscape Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>