force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Landscape_Lighting__c.field-meta.xml
<CustomField>
    <fullName>AI_Landscape_Lighting__c</fullName>
    <label>AI Landscape Lighting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>