force-app/main/default/objects/Door_Tag_Script__c/fields/AI_New_Install_HVAC__c.field-meta.xml
<CustomField>
    <fullName>AI_New_Install_HVAC__c</fullName>
    <label>AI New Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>