force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Number_of_closets__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_closets__c</fullName>
    <label>AI Number of closets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>