force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Number_of_Doors_Garage__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_Doors_Garage__c</fullName>
    <description>It holds the value about  #of doors</description>
    <label>AI # of Doors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>