force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Number_of_rooms_flooring__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_rooms_flooring__c</fullName>
    <description>It holds the value about #of rooms</description>
    <label>AI # of rooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>