force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Number_of_windows__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_windows__c</fullName>
    <description>It holds the value about #of windows</description>
    <label>AI # of windows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>