force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Partial_Bathroom__c.field-meta.xml
<CustomField>
    <fullName>AI_Partial_Bathroom__c</fullName>
    <label>AI Partial Bathroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>