force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Plumbing_fixture_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Plumbing_fixture_install__c</fullName>
    <label>AI Plumbing fixture install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>