force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Plumbing_leak_detection_and_repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Plumbing_leak_detection_and_repair__c</fullName>
    <label>AI Plumbing leak detection and repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>