force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Plumbing_pipe_fitting__c.field-meta.xml
<CustomField>
    <fullName>AI_Plumbing_pipe_fitting__c</fullName>
    <label>AI Plumbing pipe fitting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>