force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Project_Details__c.field-meta.xml
<CustomField>
    <fullName>AI_Project_Details__c</fullName>
    <label>AI Project Details?</label>
    <type>TextArea</type>
</CustomField>