force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Project_Details_Home_Remodeling__c.field-meta.xml
<CustomField>
    <fullName>AI_Project_Details_Home_Remodeling__c</fullName>
    <label>AI Project Details?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>