force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Repair_of_old_electrical__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_of_old_electrical__c</fullName>
    <label>AI Repair of old electrical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>