force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Repair_replacement__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_replacement__c</fullName>
    <label>AI Repair/replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>