force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Rmaintenance__c.field-meta.xml
<CustomField>
    <fullName>AI_Rmaintenance__c</fullName>
    <label>AI Rmaintenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>