force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Roof_replacement__c.field-meta.xml
<CustomField>
    <fullName>AI_Roof_replacement__c</fullName>
    <label>AI Roof replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>