force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Saltwater_or_Chlorine__c.field-meta.xml
<CustomField>
    <fullName>AI_Saltwater_or_Chlorine__c</fullName>
    <label>AI Saltwater or Chlorine?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>