force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Shed_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Shed_Repair__c</fullName>
    <label>AI Shed Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>