force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Shelves__c.field-meta.xml
<CustomField>
    <fullName>AI_Shelves__c</fullName>
    <label>AI Shelves</label>
    <length>255</length>
    <type>Text</type>
</CustomField>