force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Siding_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>AI_Siding_Cleaning__c</fullName>
    <label>AI Siding Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>