force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Size_of_house__c.field-meta.xml
<CustomField>
    <fullName>AI_Size_of_house__c</fullName>
    <label>AI Size of house</label>
    <length>255</length>
    <type>Text</type>
</CustomField>