force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Solar_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_Solar_Install__c</fullName>
    <label>AI Solar Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>