force-app/main/default/objects/Door_Tag_Script__c/fields/AI_Storage_system__c.field-meta.xml
<CustomField>
    <fullName>AI_Storage_system__c</fullName>
    <label>AI Storage system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>