force-app/main/default/objects/Door_Tag_Script__c/fields/AI_System_design__c.field-meta.xml
<CustomField>
    <fullName>AI_System_design__c</fullName>
    <label>AI System design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>