force-app/main/default/objects/Door_Tag_Script__c/fields/AI_type_of_stone__c.field-meta.xml
<CustomField>
    <fullName>AI_type_of_stone__c</fullName>
    <label>AI type of stone?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>