force-app/main/default/objects/Door_Tag_Script__c/fields/AI_What_part_of_bathroom__c.field-meta.xml
<CustomField>
    <fullName>AI_What_part_of_bathroom__c</fullName>
    <label>AI What part of bathroom?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>