force-app/main/default/objects/Door_Tag_Script__c/fields/AI_What_type_of_pest_problem__c.field-meta.xml
<CustomField>
    <fullName>AI_What_type_of_pest_problem__c</fullName>
    <label>AI What type of pest problem?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>