force-app/main/default/objects/Door_Tag_Script__c/fields/Appointment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Summary__c</fullName>
    <description>This filed will contains the information about industry and survey questions,responses and appointment details</description>
    <label>Appointment Summary</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>