force-app/main/default/objects/Door_Tag_Script__c/fields/Are_you_the_homeowner__c.field-meta.xml
<CustomField>
    <fullName>Are_you_the_homeowner__c</fullName>
    <label>Are you the homeowner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>