force-app/main/default/objects/Door_Tag_Script__c/fields/Areyouplanningonupgradinganyfloori__c.field-meta.xml
<CustomField>
    <fullName>Areyouplanningonupgradinganyfloori__c</fullName>
    <label>Are you planning on upgrading any floori</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>