force-app/main/default/objects/Door_Tag_Script__c/fields/Assigned_to_OB__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_OB__c</fullName>
    <formula>IF(LEFT(Owner:User.UserRole.Name, 2) = &apos;OB&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to OB</label>
    <type>Checkbox</type>
</CustomField>