force-app/main/default/objects/Door_Tag_Script__c/fields/Auto_New_Car__c.field-meta.xml
<CustomField>
    <fullName>Auto_New_Car__c</fullName>
    <label>Auto (New Car)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Already Has</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>