force-app/main/default/objects/Door_Tag_Script__c/fields/Bathroom_Remodeling__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Remodeling__c</fullName>
    <label>Bathroom Remodeling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Verified Lead</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Already Has</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>