force-app/main/default/objects/Door_Tag_Script__c/fields/Box_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Box_Confirmation_Email__c</fullName>
    <label>Box Confirmation Email</label>
    <type>Email</type>
</CustomField>