force-app/main/default/objects/Door_Tag_Script__c/fields/boxes_unpacked__c.field-meta.xml
<CustomField>
    <fullName>boxes_unpacked__c</fullName>
    <label>boxes unpacked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>