force-app/main/default/objects/Door_Tag_Script__c/fields/Cable_and_Internet_Service__c.field-meta.xml
<CustomField>
    <fullName>Cable_and_Internet_Service__c</fullName>
    <label>Cable and Internet Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified Lead</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Already Has</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>